[tool.poetry]
name = "levenshtein"
version = "0.1.0"
description = "Calculate the Levenshtein distance between two sequences"
authors = ["Patrick Heck <49785565+FitzOReilly@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.5.3"
black = "^20.8b1"
flake8 = "^3.8.3"
pre-commit = "^2.7.1"
tox = "^3.20.0"
coverage = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
